--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -9,6 +9,7 @@ uiServer:
   image:
     repository: weaveworks/wkp-ui-server
     tag: master-9b164d3
+    pullSecrets: []
     pullPolicy: IfNotPresent
   service:
     port: 80
