--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -26,6 +26,7 @@ uiServer:
       singleNode: http://wkp-ui-grafana.monitoring.svc:80/d/single-node-resources/kubernetes-single-node-resources
 
 grafanaSync:
+  enabled: true
   image:
     repository: weaveworks/wkp-grafana-sync
     tag: master-9b164d3
