Add enabled option to ui-server

--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -6,6 +6,7 @@ ingress:
   # TODO more config
 
 uiServer:
+  enabled: true
   image:
     repository: weaveworks/wkp-ui-server
     tag: master-9b164d3
