--- a/ui/chart/wkp-ui/templates/ingress.yaml
+++ b/ui/chart/wkp-ui/templates/ingress.yaml
@@ -1,24 +1,39 @@
-{{- if .Values.ingress.enabled -}}
-# TODO make annotations and path configurable, allow configuring the service type
-
+{{- if .Values.uiServer.ingress.enabled -}}
+{{- $releaseName := .Release.Name -}}
+{{- $servicePort := .Values.uiServer.service.port -}}
+{{- $ingressPath := .Values.uiServer.ingress.path -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ include "wkp-ui.fullname" . }}
+  labels:
+   heritage: {{ include "wkp-ui.fullname" . }}
+{{- if .Values.uiServer.ingress.labels }}
+{{ toYaml .Values.uiServer.ingress.labels | indent 4 }}
+{{- end }}
+{{- with .Values.uiServer.ingress.annotations }}
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: "/"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+{{ toYaml . | indent 4 }}
+{{- end }}
 spec:
+{{- if .Values.uiServer.ingress.tls }}
+  tls:
+  {{- range .Values.uiServer.ingress.tls }}
+    - hosts:
+      {{- range .hosts }}
+        - {{ . | quote }}
+      {{- end }}
+      secretName: {{ .secretName }}
+  {{- end }}
+{{- end }}
   rules:
-  - http:
-      paths:
-      # TODO: Use wkp-ui-server for the root path and /grafana path for all the dashboards
-      - path: /homepage
-        backend:
-          serviceName: {{ .Release.Name }}-server
-          servicePort: {{ .Values.uiServer.service.port }}
-      - path: /
-        backend:
-          serviceName: {{ .Release.Name }}-grafana
-          servicePort: {{ .Values.grafana.service.port }}
+  {{- range .Values.uiServer.ingress.hosts }}
+    - host: {{ . }}
+      http:
+        paths:
+          - path: {{ $ingressPath }}
+            backend:
+              serviceName: {{ $releaseName }}-server
+              servicePort: {{ $servicePort }}
+  {{- end }}
 {{- end }}
