--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -20,31 +20,49 @@ uiServer:
     name: wkp-ui-server
     port: 80
   config:
-    alertmanagerUrl: http://prometheus-operator-alertmanager.monitoring.svc:9093/api/v1
-    prometheusUrl: http://prometheus-operator-prometheus.monitoring.svc:9090/api/v1
-    cluster:
+    datasources:
+      alertmanager: http://prometheus-operator-alertmanager.monitoring.svc:9093/api/v1
+      prometheus: http://prometheus-operator-prometheus.monitoring.svc:9090/api/v1
+    clusterInfo:
       name: WKP/My Cluster
       provider: ''
       regions: ''
-    alerts:
-      displayLimit: 1
-      rotationInterval: 5s
-      datasource:
-        url: http://localhost:9093/api/v1
-        # url: http://prometheus-operator-alertmanager.monitoring.svc:9093
+    homepage:
+      alertNotifications:
+        enabled: true
+        rotate: true
+        rotationInterval: 5s
         pollInterval: 15s
-    prometheus:
-      timeRange: 1h
-      datasource:
-        url: http://localhost:9090/api/v1
-        # url: http://prometheus-operator-prometheus.monitoring.svc:9090
+        displayLimit: 1
+        drilldownLink:
+          url: http://wkp-ui-grafana.monitoring.svc:80/d/alerts/prometheus-alertmanager
+      clusterResources:
+        enabled: true
         pollInterval: 15s
-    grafana:
-      url: http://wkp-ui-grafana.monitoring.svc:80
-      dashboards:
-        alerts: alerts/prometheus-alertmanager
-        clusterResources: all-nodes-resources/kubernetes-all-nodes-resources
-        nodeResources: single-node-resources/kubernetes-single-node-resources
+        cpu:
+          query: sum (rate (container_cpu_usage_seconds_total{id="/"}[5m])) / sum (machine_cpu_cores)
+          drilldownLink:
+            url: http://wkp-ui-grafana.monitoring.svc:80/d/all-nodes-resources/kubernetes-all-nodes-resources
+        memory:
+          query: sum (container_memory_working_set_bytes{id="/"}) / sum (machine_memory_bytes)
+          drilldownLink:
+            url: http://wkp-ui-grafana.monitoring.svc:80/d/all-nodes-resources/kubernetes-all-nodes-resources
+      nodesOverview:
+        enabled: true
+        title: All Nodes
+        pollInterval: 15s
+        resource1:
+          name: CPU
+          query: node:node_cpu_utilisation:avg1m
+        resource2:
+          name: Memory
+          query: node:node_memory_utilisation:ratio
+        singlestat:
+          name: Pods
+          query: sum (kube_pod_info) by (__name__,node)
+        drilldownLink:
+          nodeQueryParam: instance
+          url: http://wkp-ui-grafana.monitoring.svc:80/d/single-node-resources/kubernetes-single-node-resources
 
 grafanaSync:
   enabled: false
