--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -1,6 +1,74 @@
 nameOverride: ""
 fullnameOverride: ""
 
+prometheusOperator:
+  grafana:
+    enabled: false
+  nodeExporter:
+    serviceMonitor:
+      relabelings:
+      - sourceLabels: [__meta_kubernetes_pod_node_name]
+        targetLabel: instance
+  alertmanager:
+    alertmanagerSpec:
+      useExistingSecret: true
+    ingress:
+      enabled: true
+      annotations:
+        # nginx.ingress.kubernetes.io/auth-type: basic
+        # nginx.ingress.kubernetes.io/auth-secret: prometheus-ingress-basic-auth
+        nginx.ingress.kubernetes.io/rewrite-target: "/$1"
+        nginx.ingress.kubernetes.io/ssl-redirect: "false"
+      hosts: ['example.dev.weave.works']
+      paths:
+      - /alertmanager/?(.*)
+  additionalPrometheusRules:
+  - name: wkp-k8s.rules
+    groups:
+    - name: wkp-k8s-alerts.rules
+      rules:
+      - alert: NodeHighMemoryUsage
+        expr: '(1 - max((node_memory_Cached_bytes + node_memory_MemFree_bytes + node_memory_Buffers_bytes) / node_memory_MemTotal_bytes) by (instance)) > 0.9'
+        for: 30s
+        labels:
+          severity: warning
+        annotations:
+          containerName: prom-node-exporter
+          impact: Risk of OOM kills, possibly resulting in loss of customer data
+          summary: Memory usage has been over 90% for 30s
+    - name: wkp-k8s.rules
+      rules:
+      - record: namespace_label_name:container_cpu_usage_seconds_total:sum_rate
+        expr: sum by(namespace, label_name) (label_replace(sum by(pod_name, namespace)
+          (rate(container_cpu_usage_seconds_total{image!=""}[5m])), "pod", "$1", "pod_name",
+          "(.*)") * on(pod) group_right(pod_name) kube_pod_labels{job="kube-state-metrics"})
+      - record: namespace_label_name:container_memory_usage_bytes:sum
+        expr: sum by(namespace, label_name) (label_replace(sum by(pod_name, namespace)
+          (container_memory_usage_bytes{image!=""}), "pod", "$1", "pod_name", "(.*)")
+          * on(pod) group_right(pod_name) kube_pod_labels{job="kube-state-metrics"})
+      - record: namespace_label_name:container_network_receive_bytes_total:sum_rate
+        expr: sum by(namespace, label_name) (label_replace(sum by(pod_name, namespace)
+          (rate(container_network_receive_bytes_total{image!="",interface="eth0"}[5m])),
+          "pod", "$1", "pod_name", "(.*)") * on(pod) group_right(pod_name) kube_pod_labels{job="kube-state-metrics"})
+      - record: namespace_label_name:container_network_transmit_bytes_total:sum_rate
+        expr: sum by(namespace, label_name) (label_replace(sum by(pod_name, namespace)
+          (rate(container_network_transmit_bytes_total{image!="",interface="eth0"}[5m])),
+          "pod", "$1", "pod_name", "(.*)") * on(pod) group_right(pod_name) kube_pod_labels{job="kube-state-metrics"})
+  prometheus:
+    prometheusSpec:
+      ruleSelectorNilUsesHelmValues: false
+      externalUrl: https://example.dev.weave.works/prometheus/
+    ingress:
+      enabled: true
+      annotations:
+        # nginx.ingress.kubernetes.io/auth-type: basic
+        # nginx.ingress.kubernetes.io/auth-secret: prometheus-ingress-basic-auth
+        nginx.ingress.kubernetes.io/rewrite-target: "/$1"
+        nginx.ingress.kubernetes.io/ssl-redirect: "false"
+      hosts: ['example.dev.weave.works']
+      paths:
+      - /prometheus/?(.*)
+
 uiServer:
   enabled: true
   image:
@@ -51,10 +119,10 @@ uiServer:
         enabled: true
         title: All Nodes
         pollInterval: 15s
-        resource1:
+        sparkline1:
           name: CPU
           query: node:node_cpu_utilisation:avg1m
-        resource2:
+        sparkline2:
           name: Memory
           query: node:node_memory_utilisation:ratio
         singlestat:
