--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -1,79 +1,11 @@
 nameOverride: ""
 fullnameOverride: ""
 
-prometheusOperator:
-  grafana:
-    enabled: false
-  nodeExporter:
-    serviceMonitor:
-      relabelings:
-      - sourceLabels: [__meta_kubernetes_pod_node_name]
-        targetLabel: instance
-  alertmanager:
-    alertmanagerSpec:
-      useExistingSecret: true
-    ingress:
-      enabled: true
-      annotations:
-        # nginx.ingress.kubernetes.io/auth-type: basic
-        # nginx.ingress.kubernetes.io/auth-secret: prometheus-ingress-basic-auth
-        nginx.ingress.kubernetes.io/rewrite-target: "/$1"
-        nginx.ingress.kubernetes.io/ssl-redirect: "false"
-      hosts: ['example.dev.weave.works']
-      paths:
-      - /alertmanager/?(.*)
-  additionalPrometheusRules:
-  - name: wkp-k8s.rules
-    groups:
-    - name: wkp-k8s-alerts.rules
-      rules:
-      - alert: NodeHighMemoryUsage
-        expr: '(1 - max((node_memory_Cached_bytes + node_memory_MemFree_bytes + node_memory_Buffers_bytes) / node_memory_MemTotal_bytes) by (instance)) > 0.9'
-        for: 30s
-        labels:
-          severity: warning
-        annotations:
-          containerName: prom-node-exporter
-          impact: Risk of OOM kills, possibly resulting in loss of customer data
-          summary: Memory usage has been over 90% for 30s
-    - name: wkp-k8s.rules
-      rules:
-      - record: namespace_label_name:container_cpu_usage_seconds_total:sum_rate
-        expr: sum by(namespace, label_name) (label_replace(sum by(pod_name, namespace)
-          (rate(container_cpu_usage_seconds_total{image!=""}[5m])), "pod", "$1", "pod_name",
-          "(.*)") * on(pod) group_right(pod_name) kube_pod_labels{job="kube-state-metrics"})
-      - record: namespace_label_name:container_memory_usage_bytes:sum
-        expr: sum by(namespace, label_name) (label_replace(sum by(pod_name, namespace)
-          (container_memory_usage_bytes{image!=""}), "pod", "$1", "pod_name", "(.*)")
-          * on(pod) group_right(pod_name) kube_pod_labels{job="kube-state-metrics"})
-      - record: namespace_label_name:container_network_receive_bytes_total:sum_rate
-        expr: sum by(namespace, label_name) (label_replace(sum by(pod_name, namespace)
-          (rate(container_network_receive_bytes_total{image!="",interface="eth0"}[5m])),
-          "pod", "$1", "pod_name", "(.*)") * on(pod) group_right(pod_name) kube_pod_labels{job="kube-state-metrics"})
-      - record: namespace_label_name:container_network_transmit_bytes_total:sum_rate
-        expr: sum by(namespace, label_name) (label_replace(sum by(pod_name, namespace)
-          (rate(container_network_transmit_bytes_total{image!="",interface="eth0"}[5m])),
-          "pod", "$1", "pod_name", "(.*)") * on(pod) group_right(pod_name) kube_pod_labels{job="kube-state-metrics"})
-  prometheus:
-    prometheusSpec:
-      ruleSelectorNilUsesHelmValues: false
-      externalUrl: https://example.dev.weave.works/prometheus/
-    ingress:
-      enabled: true
-      annotations:
-        # nginx.ingress.kubernetes.io/auth-type: basic
-        # nginx.ingress.kubernetes.io/auth-secret: prometheus-ingress-basic-auth
-        nginx.ingress.kubernetes.io/rewrite-target: "/$1"
-        nginx.ingress.kubernetes.io/ssl-redirect: "false"
-      hosts: ['example.dev.weave.works']
-      paths:
-      - /prometheus/?(.*)
-
 uiServer:
   enabled: true
   image:
     repository: weaveworks/wkp-ui-server
-    tag: master-1f41890
+    tag: master-7804c3c
     pullSecrets: []
     pullPolicy: IfNotPresent
   ingress:
@@ -89,8 +21,8 @@ uiServer:
     port: 80
   config:
     datasources:
-      alertmanager: http://localhost:9093/api/v1
-      prometheus: http://localhost:9090/api/v1
+      alertmanager: http://prometheus-operator-alertmanager.monitoring.svc:9093/api/v1
+      prometheus: http://prometheus-operator-prometheus.monitoring.svc:9090/api/v1
     clusterInfo:
       name: WKP/My Cluster
       provider: ''
@@ -133,7 +65,7 @@ uiServer:
           url: http://wkp-ui-grafana.monitoring.svc:80/d/single-node-resources/kubernetes-single-node-resources
 
 grafanaSync:
-  enabled: false
+  enabled: true
   image:
     repository: weaveworks/wkp-grafana-sync
     tag: master-1f41890
@@ -158,7 +90,7 @@ grafanaSync:
   resources: {}
 
 grafana:
-  enabled: false
+  enabled: true
   grafana.ini:
     analytics:
       reporting_enabled: false
