--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 # https://circleci.com/blog/circleci-hacks-reuse-yaml-in-your-circleci-config-with-yaml/
 defaults: &defaults
   docker:
-    - image: quay.io/wks/build:master-134af34f
+    - image: docker.io/weaveworks/wks-build:master-7421a07b
       environment:
         GOPATH: /go/
         SRCDIR: /src/github.com/weaveworks/wks
@@ -66,16 +66,12 @@ jobs:
           - kubectl
           - cmd/wksctl/wksctl
           - cmd/mock-https-authz-server/server
-      - run:
-          name: Log in to Docker registries
-          command: |
-            docker login -u "$QUAY_IO_USER" -p "$QUAY_IO_PASSWORD" quay.io
-            docker login -u "$DOCKER_IO_USER" -p "$DOCKER_IO_PASSWORD" docker.io
+      - run: docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD" docker.io
       - run: make push
 
   unit-tests:
     docker:
-      - image: quay.io/wks/build:master-134af34f
+      - image: docker.io/weaveworks/wks-build:master-7421a07b
         environment:
           GOPATH: /go
           SRCDIR: /src/github.com/weaveworks/wks
@@ -189,7 +185,7 @@ jobs:
 
   integration-tests-gcp-centos:
     docker:
-      - image: quay.io/wks/build:master-134af34f
+      - image: docker.io/weaveworks/wks-build:master-7421a07b
         environment:
           GOPATH: /go/
           SRCDIR: /src/github.com/weaveworks/wks
@@ -232,7 +228,7 @@ jobs:
 
   integration-tests-gcp-ubuntu:
     docker:
-      - image: quay.io/wks/build:master-134af34f
+      - image: docker.io/weaveworks/wks-build:master-7421a07b
         environment:
           GOPATH: /go/
           SRCDIR: /src/github.com/weaveworks/wks
