--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           - kubectl
           - cmd/wksctl/wksctl
           - cmd/mock-https-authz-server/server
-      - run: docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD" docker.io
+      - run: docker login -u "$DOCKER_IO_USER" -p "$DOCKER_IO_PASSWORD" docker.io
       - run: make push
 
   unit-tests:
