Apply OPA permissions and user-defined policies to git commits (#710)
* first pass

* remove policy-admin as a role

* remove extraneous content processing when doing permission checking for modified files

* fix handling of objects in deleted files

* allow policy.admins and policy files to be concurrently modified

* only policy admins can edit policy.admins

* reformat rego files with "opa fmt"

* Plug policy into overall checker

* formatting, docs, and tests

* add policy to formatters

* ensure generated policy files are available to the policy command at build time

* review fixes other than diff replacement

* generate debug output for unit test that passes locally

* generate more debug output for unit test that passes locally

* generate yet more debug output for unit test that passes locally

* swap out diff implementation with one based on go-cmp

* address remainder of review comments (including swapping out diff)

* fix last pass of review comments

* switch to using empty instead of nil when returning sets after an error occurred

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /cmd/wksctl/wksctl
 /cmd/wks-ci/wks-ci
 /cmd/controller/controller
-/cmd/policy/policy
+/cmd/wks-ci/checks/policy/policy
 /examples/.vagrant
 .uptodate
 /cmd/wks-entitle/wks-entitle
