Avoid caching cluster-component.json configuration
- Make pollInterval configurable too for better demos
- Clean up some React warnings

--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -65,6 +65,7 @@ config:
         url: http://wkp-ui-grafana.monitoring.svc:80/d/single-node-resources/kubernetes-single-node-resources
     clusterComponents:
       enabled: true
+      pollInterval: 5s
       configMap:
         name: ""
         key: components.json
