--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -20,8 +20,8 @@ service:
   port: 80
 config:
   datasources:
-    alertmanager: http://prometheus-operator-alertmanager.monitoring.svc:9093/api/v1
-    prometheus: http://prometheus-operator-prometheus.monitoring.svc:9090/api/v1
+    alertmanager: ''
+    prometheus: ''
   drilldownLinks:
     # Set the url values to make the drilldown links work
     cluster_resources:
@@ -30,7 +30,7 @@ config:
       queryParam: instance
       url: ''
     alertmanager_dashboard:
-      url: http://prometheus-operator-alertmanager.monitoring.svc:9093/#/alerts
+      url: ''
   resources:
     cluster_cpu_utilisation:
       label: CPU
@@ -81,5 +81,5 @@ config:
       enabled: true
       pollInterval: 5s
       configMap:
-        name: ""
+        name: ''
         key: components.json
