circleci: split "make" and "make lint" into separate build steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,10 +46,8 @@ jobs:
       - checkout
       - <<: *checkoutWithSSH
       - setup_remote_docker
-      - run:
-          command: |
-            make
-            make lint
+      - run: make
+      - run: make lint
       - deploy:
           name: Push wksctl to S3
           command: |
