--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -18,6 +18,9 @@ ingress:
 service:
   name: wkp-ui-server
   port: 80
+
+// remember to consult `app/ui/src/entities/config.ts` before making any changes to this file.
+// see https://github.com/weaveworks/wkp-ui/issues/200
 config:
   datasources:
     alertmanager: 'http://localhost:9093/api/v1'
