--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -19,6 +19,11 @@ service:
   name: wkp-ui-server
   port: 80
 config: # remember to consult `app/ui/src/entities/config.ts` before making any changes to this file. (see see https://github.com/weaveworks/wkp-ui/issues/200)
+  git:
+    url: git@github.com:foot/wkp-core.git
+    deployKeySecret:
+      name: 'wkp-ui-git-deploy-key'
+      key: 'identity'
   datasources:
     alertmanager: ''
     prometheus: ''
